# mucheck

./: .gitignore  MuCheck.cabal
Examples/: AssertCheckTest.hs  Main.hs
src/: Main.hs
src/Test/MuCheck/: Interpreter.hs  MuOp.hs  Mutation.hs  Tix.hs
src/Test/MuCheck/Utils/: Helpers.hs
test/: Spec.hs
test/Test/MuCheck/: MutationSpec.hs
test/Test/MuCheck/MutationSpec/: Helpers.hs
