cabal-version:       3.4
name:                MuCheck
version:             0.4.0.0
synopsis:            Automated Mutation Testing
description:         This package defines a mutation analysis library for haskell
                     programs. It does this by parsing the haskell source, and
                     replacing a few of the common haskell functions and operators
                     with other, but similar operators and functions, and running
                     the testsuite to check whether the difference has been
                     detected.
homepage:            https://bitbucket.com/osu-testing/mucheck
license-file:        LICENSE
author:              Duc Lee <ledu@onid.oregonstate.edu>,
                     Rahul Gopinath <rahul@gopinath.org>
maintainer:          rahul@gopinath.org
category:            Testing
build-type:          Simple
extra-source-files:  changes.md

source-repository    head
  type:              git
  location:          https://bitbucket.org/osu-testing/mucheck.git

source-repository    this
  type:              git
  location:          https://bitbucket.org/osu-testing/mucheck.git
  tag:               0.4.0.0

library
  exposed-modules:  Test.MuCheck,
                    Test.MuCheck.MuOp,
                    Test.MuCheck.Config,
                    Test.MuCheck.Interpreter,
                    Test.MuCheck.Mutation,
                    Test.MuCheck.Utils.Syb,
                    Test.MuCheck.Utils.Common,
                    Test.MuCheck.Utils.Print,
                    Test.MuCheck.TestAdapter,
                    Test.MuCheck.TestAdapter.AssertCheck,
                    Test.MuCheck.TestAdapter.AssertCheckAdapter,
                    Test.MuCheck.AnalysisSummary,
                    Test.MuCheck.Utils.Helpers,
                    Test.MuCheck.Tix
  ghc-options:      -Wall
  build-depends:    base,
                    haskell-src-exts,
                    syb,
                    time,
                    hint,
                    mtl,
                    random,
                    directory,
                    temporary,
                    hashable,
                    hpc,
                    template-haskell
  default-language: Haskell2010
  hs-source-dirs:   src

executable mucheck
  main-is:          Main.hs
  ghc-options:      -Wall
  build-depends:    base,
                    haskell-src-exts,
                    syb,
                    time,
                    hint,
                    mtl,
                    random,
                    directory,
                    temporary,
                    hashable,
                    hpc,
                    template-haskell,
                    MuCheck
  default-language: Haskell2010
  other-modules:    Test.MuCheck,
                    Test.MuCheck.MuOp,
                    Test.MuCheck.Config,
                    Test.MuCheck.Interpreter,
                    Test.MuCheck.Mutation,
                    Test.MuCheck.Utils.Syb,
                    Test.MuCheck.Utils.Common,
                    Test.MuCheck.Utils.Print,
                    Test.MuCheck.TestAdapter,
                    Test.MuCheck.TestAdapter.AssertCheck,
                    Test.MuCheck.TestAdapter.AssertCheckAdapter,
                    Test.MuCheck.AnalysisSummary,
                    Test.MuCheck.Utils.Helpers,
                    Test.MuCheck.Tix
  hs-source-dirs:   src

executable sample-test
  hs-source-dirs:   Examples
  main-is:          Main.hs
  build-depends:    base,
                    MuCheck
  default-language: Haskell2010
  other-modules: AssertCheckTest
  ghc-options:      -fhpc

test-suite spec
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Spec.hs
  default-language: Haskell2010
  build-depends:    base,
                    haskell-src-exts,
                    syb,
                    time,
                    hint,
                    mtl,
                    hspec,
                    MuCheck,
                    random,
                    directory,
                    temporary,
                    hashable,
                    hpc,
                    template-haskell
  other-modules:    Test.MuCheck.MutationSpec,
                    Test.MuCheck.MutationSpec.Helpers,
                    Test.MuCheck.Utils.CommonSpec,
                    Test.MuCheck.Utils.PrintSpec,
                    Here